--- a/movies/templates/index.html
+++ b/movies/templates/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
 <body class="bg-slate-700 min-h-screen flex flex-col ">
@@ -15,23 +16,32 @@
                     Cinemarit.
                 </h1>
             </a>
-            <nav class="self-center text-xl font-semibold  ">
+            <div class="self-center text-xl font-semibold  ">
                 <a class="mr-auto  bg-red-400 p-2 rounded" href="/api/">
                     Movie API
                 </a>
-            </nav>
+                
+            </div>
+            <div class="self-center text-xl font-semibold  ">
+                <form action="" method="get">
+                    <input type="text" name="movie_name" class="text-lg text-slate-700 p-1" placeholder="Search here">
+                    <button type="submit" > 
+                        <i class="fa fa-search text-2xl hover:scale-110"> </i>
+                    </button> 
+                </form>
+            </div>
         </div>
         <p class="text-2xl font-semibold my-3"> Where imagination meets technology.</p>
         
         
-        <div class="MovieList flex justify-center flex-wrap gap-5 text-wrap m-5">
+        <div class="MovieList flex justify-center font-medium flex-wrap gap-5 text-wrap m-5">
             {% for movie in page_obj %}
                 <div class="max-w-52 bg-slate-600 justify-center items-center p-2 rounded-md">
                     <img class="w-48 "  src="{{movie.image.url}}" alt="">
-                    <p class="text-amber-400 text-xl "> {{ movie.name }} </p>
-                    <p class="text-lg"> {{ movie.duration }} Mins </p>
+                    <!-- <p class="text-lg"> {{ movie.duration }} Mins </p> -->
                     <p class="text-black"> {{ movie.rating }} </p>
-                    <p> {{ movie.genre }} </p>
+                    <p class="text-sm"> {{ movie.genre }} </p>
+                    <p class="text-amber-400 text-xl text-center "> {{ movie.name }} </p>
                     
                 </div>
             {% endfor %}
